public/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font: 1rem Helvetica, Arial;
}

nav {
    display: flex;
    justify-content: space-around;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    width: 100%;   
}

nav button {
    background: #62cf3d;
    font-size: 1rem;
    margin: 0.5rem;
    padding: 1rem;
}

nav button:nth-child(2) {
    background: #de92ef;
}

nav button:nth-child(3) {
    background: #92efde;
}

nav a.hidden {
    display: none;
}

form {
    background: #000;
    padding: 3px;
    position: fixed;
    bottom: 0;
    width: 100%;
}

form input {
    border: 0;
    padding: 2rem;
    margin-right: .5%;
    width: 90%;
    font-size: 1.5rem;
}

form button {
    background: rgb(130, 224, 255);
    border: none;
    height: 62px;
    padding: 10px;
    width: 9%;
    font-size: 1.25rem;
}

#messages {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#messages li {
    padding: 5px 10px;
}

#messages li:nth-child(odd) {
    background: #eee;
}

@media only screen and (max-width: 768px) {
    form input {
        width: 80%;
        padding: 1rem;
    }

    form button {
        width: 19%;
    }
}

